[gd_scene load_steps=50 format=3 uid="uid://cvglwib0nbv3w"]

[ext_resource type="Script" path="res://scripts/main_xr.gd" id="1_xgn4l"]
[ext_resource type="PackedScene" uid="uid://ddsj74hpt1kgb" path="res://addons/godot-xr-tools/hands/scenes/highpoly/left_physics_tac_glove.tscn" id="2_1fc4o"]
[ext_resource type="PackedScene" uid="uid://btknduttnmoxf" path="res://addons/godot-xr-tools/misc/vr_common_shader_cache.tscn" id="2_r5drp"]
[ext_resource type="PackedScene" uid="uid://b4ysuy43poobf" path="res://addons/godot-xr-tools/functions/function_pickup.tscn" id="3_bao6y"]
[ext_resource type="PackedScene" uid="uid://b6xesntm4qeo5" path="res://addons/godot-xr-tools/hands/scenes/highpoly/right_physics_tac_glove.tscn" id="4_ajr61"]
[ext_resource type="PackedScene" uid="uid://clujaf3u776a3" path="res://addons/godot-xr-tools/objects/viewport_2d_in_3d.tscn" id="6_47cmc"]
[ext_resource type="PackedScene" uid="uid://dwxyvas5wnpv0" path="res://scenes/ui/ship_ui.tscn" id="7_n6b1w"]
[ext_resource type="PackedScene" uid="uid://7r3anwvhrpdw" path="res://objects/omni_screen.tscn" id="9_8cl48"]
[ext_resource type="PackedScene" uid="uid://dyjpt2kj78udn" path="res://objects/core.tscn" id="10_07g72"]
[ext_resource type="PackedScene" uid="uid://dcb2rnjj7i53k" path="res://objects/shield.tscn" id="10_mnrau"]
[ext_resource type="PackedScene" uid="uid://dfuaf5pb2eiea" path="res://objects/pickable_gun.tscn" id="11_iq5it"]
[ext_resource type="PackedScene" uid="uid://c2fybfvjcllyl" path="res://objects/quarter_circle_mesh.tscn" id="11_nb36m"]
[ext_resource type="Shader" path="res://assets/shaders/hp_bar_bicolor.gdshader" id="12_qyjwu"]
[ext_resource type="PackedScene" uid="uid://ixj7l3f60i34" path="res://objects/omni_screen_ui.tscn" id="13_1tfvx"]
[ext_resource type="PackedScene" uid="uid://44oljc3uxs0l" path="res://objects/oxygen_bar.tscn" id="13_ugd5s"]
[ext_resource type="PackedScene" uid="uid://diqcwca2on1df" path="res://objects/pickable_energy_cell.tscn" id="14_trw2q"]
[ext_resource type="PackedScene" uid="uid://b7lx1bvrt3glp" path="res://objects/nav_system_example.tscn" id="16_bwulk"]
[ext_resource type="PackedScene" uid="uid://lkjo5h61h48m" path="res://objects/pickable_solar_cell.tscn" id="16_m57o7"]
[ext_resource type="PackedScene" uid="uid://bhsx1muleg6rb" path="res://objects/weapon_system_example.tscn" id="16_pivml"]
[ext_resource type="PackedScene" uid="uid://bq2us4wa6ntyh" path="res://objects/shield_system_example.tscn" id="17_5wwgv"]
[ext_resource type="PackedScene" uid="uid://bp61i5dl76be3" path="res://objects/weapon_ion_system_example.tscn" id="18_fqkt8"]
[ext_resource type="Script" path="res://scripts/enemy_spawner.gd" id="19_w5q7l"]
[ext_resource type="PackedScene" uid="uid://ceff8bovxbblw" path="res://objects/enemies/enemy_basic.tscn" id="20_r6ant"]
[ext_resource type="PackedScene" uid="uid://bf4ig4wt66p01" path="res://objects/enemies/enemy_orbital.tscn" id="21_5n1s0"]
[ext_resource type="PackedScene" uid="uid://cu3gi5eyhp7r7" path="res://objects/pickable_repairer.tscn" id="22_altib"]
[ext_resource type="PackedScene" uid="uid://c114yohjuthyh" path="res://objects/enemies/enemy_shielder.tscn" id="22_ntop1"]
[ext_resource type="PackedScene" uid="uid://bfcgkjerxsay3" path="res://objects/weapons/weapon_base.tscn" id="22_t2x7m"]
[ext_resource type="PackedScene" uid="uid://1am3p863flny" path="res://objects/weapons/weapon_bl2.tscn" id="23_u3ac8"]
[ext_resource type="PackedScene" uid="uid://wnvmmlsqe474" path="res://objects/weapons/weapon_dual.tscn" id="24_2saj3"]
[ext_resource type="Material" uid="uid://ds5mtrfu2ym3o" path="res://assets/models/sky_crossfade_mat.tres" id="26_2suw1"]
[ext_resource type="PackedScene" uid="uid://bin5j3v726idw" path="res://objects/weapons/weapon_leak.tscn" id="29_sti0e"]

[sub_resource type="BoxMesh" id="BoxMesh_0yy2b"]
size = Vector3(2, 0.1, 1.5)

[sub_resource type="BoxShape3D" id="BoxShape3D_jdo30"]
size = Vector3(2, 0.1, 1.5)

[sub_resource type="BoxMesh" id="BoxMesh_f08eb"]
size = Vector3(2, 0.1, 0.3)

[sub_resource type="BoxShape3D" id="BoxShape3D_u0l7m"]
size = Vector3(2, 0.1, 0.3)

[sub_resource type="CylinderMesh" id="CylinderMesh_kcmwr"]
top_radius = 0.05
bottom_radius = 0.05
height = 1.0

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_rt0sp"]
radius = 0.05
height = 1.0

[sub_resource type="TorusMesh" id="TorusMesh_ett78"]
inner_radius = 1.1
outer_radius = 1.2

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_lldlq"]
radius = 0.05
height = 1.0

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_ci6b3"]
friction = 0.0
bounce = 1.0

[sub_resource type="BoxShape3D" id="BoxShape3D_r52ql"]
size = Vector3(10, 0.05, 10)

[sub_resource type="BoxShape3D" id="BoxShape3D_xljkp"]
size = Vector3(0.5, 0.5, 0.016)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_05k3x"]
render_priority = 0
shader = ExtResource("12_qyjwu")
shader_parameter/color_filled = Color(0, 0.6, 0, 1)
shader_parameter/color_empty = Color(1, 0, 0, 1)
shader_parameter/max_segments = 10
shader_parameter/visible_segments = 10
shader_parameter/segment_spacing = 0.01
shader_parameter/last_space = true
shader_parameter/reverse_order = false

[sub_resource type="ImmediateMesh" id="ImmediateMesh_qe543"]
resource_local_to_scene = true

[sub_resource type="BoxShape3D" id="BoxShape3D_o0m0n"]
size = Vector3(2, 0.164514, 1.5)

[sub_resource type="BoxShape3D" id="BoxShape3D_ol3sv"]
size = Vector3(2, 0.750781, 1.5)

[sub_resource type="Sky" id="Sky_h3ng5"]
sky_material = ExtResource("26_2suw1")

[sub_resource type="Environment" id="Environment_bssff"]
background_mode = 2
sky = SubResource("Sky_h3ng5")
ssao_enabled = true
glow_enabled = true
glow_levels/2 = 0.2
glow_levels/6 = 1.0
glow_levels/7 = 1.0
glow_strength = 0.68
glow_blend_mode = 0

[sub_resource type="CameraAttributesPractical" id="CameraAttributesPractical_2pxkv"]

[node name="Main" type="Node3D"]
process_priority = -1
script = ExtResource("1_xgn4l")

[node name="Ship" type="Node3D" parent="."]
unique_name_in_owner = true

[node name="XROrigin3D" type="XROrigin3D" parent="Ship"]

[node name="XRCamera3D" type="XRCamera3D" parent="Ship/XROrigin3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.7, 0)
cull_mask = 1048543
metadata/_edit_group_ = true

[node name="VRCommonShaderCache" parent="Ship/XROrigin3D/XRCamera3D" instance=ExtResource("2_r5drp")]

[node name="LeftHand" type="XRController3D" parent="Ship/XROrigin3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.3, 1, -0.5)
tracker = &"left_hand"
metadata/_edit_group_ = true

[node name="LeftPhysicsHand2" parent="Ship/XROrigin3D/LeftHand" instance=ExtResource("2_1fc4o")]

[node name="FunctionPickup" parent="Ship/XROrigin3D/LeftHand" instance=ExtResource("3_bao6y")]
grab_distance = 0.1
ranged_enable = false

[node name="RightHand" type="XRController3D" parent="Ship/XROrigin3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.3, 1, -0.5)
tracker = &"right_hand"
metadata/_edit_group_ = true

[node name="RightPhysicsHand" parent="Ship/XROrigin3D/RightHand" instance=ExtResource("4_ajr61")]

[node name="FunctionPickup" parent="Ship/XROrigin3D/RightHand" instance=ExtResource("3_bao6y")]
grab_distance = 0.1
ranged_enable = false

[node name="World" type="Node3D" parent="Ship"]

[node name="Hull" type="Node3D" parent="Ship/World"]
metadata/_edit_lock_ = true

[node name="Ground" type="StaticBody3D" parent="Ship/World/Hull"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.05, 0)
metadata/_edit_group_ = true
metadata/_edit_lock_ = true

[node name="MeshInstance3D" type="MeshInstance3D" parent="Ship/World/Hull/Ground"]
mesh = SubResource("BoxMesh_0yy2b")
skeleton = NodePath("../../../../..")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Ship/World/Hull/Ground"]
shape = SubResource("BoxShape3D_jdo30")

[node name="Stash1" type="StaticBody3D" parent="Ship/World/Hull"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.95, 0.6)
metadata/_edit_group_ = true
metadata/_edit_lock_ = true

[node name="MeshInstance3D2" type="MeshInstance3D" parent="Ship/World/Hull/Stash1"]
mesh = SubResource("BoxMesh_f08eb")
skeleton = NodePath("../../../../..")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Ship/World/Hull/Stash1"]
shape = SubResource("BoxShape3D_u0l7m")

[node name="Stash2" type="StaticBody3D" parent="Ship/World/Hull"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.95, -0.6)
metadata/_edit_group_ = true
metadata/_edit_lock_ = true

[node name="MeshInstance3D2" type="MeshInstance3D" parent="Ship/World/Hull/Stash2"]
mesh = SubResource("BoxMesh_f08eb")
skeleton = NodePath("../../../../..")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Ship/World/Hull/Stash2"]
shape = SubResource("BoxShape3D_u0l7m")

[node name="Pillar1" type="StaticBody3D" parent="Ship/World/Hull"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.5, 0.45, -0.7)
metadata/_edit_group_ = true
metadata/_edit_lock_ = true

[node name="MeshInstance3D" type="MeshInstance3D" parent="Ship/World/Hull/Pillar1"]
mesh = SubResource("CylinderMesh_kcmwr")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Ship/World/Hull/Pillar1"]
shape = SubResource("CapsuleShape3D_rt0sp")

[node name="Pillar2" type="StaticBody3D" parent="Ship/World/Hull"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.5, 0.45, -0.7)
metadata/_edit_group_ = true
metadata/_edit_lock_ = true

[node name="MeshInstance3D" type="MeshInstance3D" parent="Ship/World/Hull/Pillar2"]
mesh = SubResource("CylinderMesh_kcmwr")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Ship/World/Hull/Pillar2"]
shape = SubResource("CapsuleShape3D_rt0sp")

[node name="Pillar3" type="StaticBody3D" parent="Ship/World/Hull"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.5, 0.45, 0.7)
metadata/_edit_group_ = true
metadata/_edit_lock_ = true

[node name="MeshInstance3D" type="MeshInstance3D" parent="Ship/World/Hull/Pillar3"]
mesh = SubResource("CylinderMesh_kcmwr")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Ship/World/Hull/Pillar3"]
shape = SubResource("CapsuleShape3D_rt0sp")

[node name="Pillar4" type="StaticBody3D" parent="Ship/World/Hull"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.5, 0.45, 0.7)
metadata/_edit_group_ = true
metadata/_edit_lock_ = true

[node name="MeshInstance3D" type="MeshInstance3D" parent="Ship/World/Hull/Pillar4"]
mesh = SubResource("CylinderMesh_kcmwr")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Ship/World/Hull/Pillar4"]
shape = SubResource("CapsuleShape3D_rt0sp")

[node name="WeaponHolder" type="StaticBody3D" parent="Ship/World/Hull"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.15, 0)
collision_mask = 7
metadata/_edit_group_ = true
metadata/_edit_lock_ = true

[node name="WeaponHolderMesh" type="MeshInstance3D" parent="Ship/World/Hull/WeaponHolder"]
mesh = SubResource("TorusMesh_ett78")
skeleton = NodePath("../../../../..")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Ship/World/Hull/WeaponHolder"]
transform = Transform3D(-4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0, 0, 1, 0, 0, 1.12)
shape = SubResource("CapsuleShape3D_lldlq")

[node name="CollisionShape3D2" type="CollisionShape3D" parent="Ship/World/Hull/WeaponHolder"]
transform = Transform3D(-4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0, 0, 1, 0, 0, -1.12)
shape = SubResource("CapsuleShape3D_lldlq")

[node name="CollisionShape3D3" type="CollisionShape3D" parent="Ship/World/Hull/WeaponHolder"]
transform = Transform3D(1.91069e-15, -4.37114e-08, 1, -1, -4.37114e-08, 0, 4.37114e-08, -1, -4.37114e-08, 1.12, 0, 0)
shape = SubResource("CapsuleShape3D_lldlq")

[node name="CollisionShape3D4" type="CollisionShape3D" parent="Ship/World/Hull/WeaponHolder"]
transform = Transform3D(1.91069e-15, -4.37114e-08, 1, -1, -4.37114e-08, 0, 4.37114e-08, -1, -4.37114e-08, -1.12, 0, 0)
shape = SubResource("CapsuleShape3D_lldlq")

[node name="CollisionShape3D5" type="CollisionShape3D" parent="Ship/World/Hull/WeaponHolder"]
transform = Transform3D(3.09086e-08, -0.707107, 0.707107, -1, -4.37114e-08, 0, 3.09086e-08, -0.707107, -0.707107, -0.8, 0, 0.8)
shape = SubResource("CapsuleShape3D_lldlq")

[node name="CollisionShape3D6" type="CollisionShape3D" parent="Ship/World/Hull/WeaponHolder"]
transform = Transform3D(3.09086e-08, -0.707107, -0.707107, -1, -4.37114e-08, 0, -3.09086e-08, 0.707107, -0.707107, -0.8, 0, -0.8)
shape = SubResource("CapsuleShape3D_lldlq")

[node name="CollisionShape3D7" type="CollisionShape3D" parent="Ship/World/Hull/WeaponHolder"]
transform = Transform3D(-3.09086e-08, 0.707107, -0.707107, -1, -4.37114e-08, 0, -3.09086e-08, 0.707107, 0.707107, 0.8, 0, -0.8)
shape = SubResource("CapsuleShape3D_lldlq")

[node name="CollisionShape3D8" type="CollisionShape3D" parent="Ship/World/Hull/WeaponHolder"]
transform = Transform3D(-3.09086e-08, 0.707107, 0.707107, -1, -4.37114e-08, 0, 3.09086e-08, -0.707107, 0.707107, 0.8, 0, 0.8)
shape = SubResource("CapsuleShape3D_lldlq")

[node name="Boundaries" type="StaticBody3D" parent="Ship/World"]
collision_layer = 16777216
collision_mask = 196614
physics_material_override = SubResource("PhysicsMaterial_ci6b3")
metadata/_edit_group_ = true
metadata/_edit_lock_ = true

[node name="CollisionShape3D" type="CollisionShape3D" parent="Ship/World/Boundaries"]
transform = Transform3D(1, 0, 0, 0, 0.707107, -0.707107, 0, 0.707107, 0.707107, 0, 0, -0.750425)
shape = SubResource("BoxShape3D_r52ql")

[node name="CollisionShape3D2" type="CollisionShape3D" parent="Ship/World/Boundaries"]
transform = Transform3D(-1, -6.18172e-08, -6.18172e-08, 0, 0.707107, -0.707107, 8.74228e-08, -0.707107, -0.707107, 0, 0, 0.75)
shape = SubResource("BoxShape3D_r52ql")

[node name="CollisionShape3D3" type="CollisionShape3D" parent="Ship/World/Boundaries"]
transform = Transform3D(-4.37114e-08, 0.707107, 0.707107, 0, 0.707107, -0.707107, -1, -3.09086e-08, -3.09086e-08, -1, 0, 0)
shape = SubResource("BoxShape3D_r52ql")

[node name="CollisionShape3D4" type="CollisionShape3D" parent="Ship/World/Boundaries"]
transform = Transform3D(-4.37114e-08, -0.707107, -0.707107, 0, 0.707107, -0.707107, 1, -3.09086e-08, -3.09086e-08, 1, 0, 0)
shape = SubResource("BoxShape3D_r52ql")

[node name="CollisionShape3D5" type="CollisionShape3D" parent="Ship/World/Boundaries"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 3.49391, 0)
shape = SubResource("BoxShape3D_r52ql")

[node name="ShipScreenHolder" type="Node3D" parent="Ship/World"]
transform = Transform3D(-1, 1.13133e-08, -8.59334e-08, -1.13133e-08, 0.965926, 0.258819, 8.59334e-08, 0.258819, -0.965926, 0.732633, 1.30764, 0.58551)
metadata/_edit_group_ = true

[node name="ShipScreenContent" parent="Ship/World/ShipScreenHolder" instance=ExtResource("6_47cmc")]
unique_name_in_owner = true
transform = Transform3D(1, 1.77636e-15, 0, 1.69407e-20, 1, -2.01882e-21, 7.10543e-15, 3.88235e-23, 1, 1.43466e-09, 0.00879443, -0.0328212)
screen_size = Vector2(0.5, 0.5)
scene = ExtResource("7_n6b1w")
viewport_size = Vector2(400, 400)
update_mode = 2
scene_properties_keys = PackedStringArray("ship_ui.gd")

[node name="ShipScreenBody" type="StaticBody3D" parent="Ship/World/ShipScreenHolder"]
collision_mask = 131072

[node name="CollisionShape3D" type="CollisionShape3D" parent="Ship/World/ShipScreenHolder/ShipScreenBody"]
transform = Transform3D(1, 3.47994e-13, -6.89226e-13, 1.69407e-20, 0.999997, -1.49012e-08, 1.42109e-14, 1.49012e-08, 0.999997, 1.38606e-09, 0.008497, -0.0416751)
shape = SubResource("BoxShape3D_xljkp")

[node name="OmniScreen" parent="Ship/World" instance=ExtResource("9_8cl48")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.7, 0)
metadata/_edit_lock_ = true

[node name="Shield" parent="Ship/World" instance=ExtResource("10_mnrau")]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.7, 0)
metadata/_edit_lock_ = true

[node name="Core" parent="Ship/World" instance=ExtResource("10_07g72")]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.2, 0)

[node name="CoreHP" parent="Ship/World" instance=ExtResource("11_nb36m")]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 4.05354, 0)
layers = 32
material_override = SubResource("ShaderMaterial_05k3x")
mesh = SubResource("ImmediateMesh_qe543")
segments = 96
inner_radius = 1.5
outer_radius = 2.0
degrees = 360.0

[node name="OxygenBar" parent="Ship/World" instance=ExtResource("13_ugd5s")]
unique_name_in_owner = true
transform = Transform3D(-4.37114e-08, 1.06581e-14, 1, 0, 1, -1.06581e-14, -1, -4.65882e-22, -4.37114e-08, 0, 0.000890236, 0)

[node name="ReflectionProbe" type="ReflectionProbe" parent="Ship/World"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.7, 0)
enable_shadows = true
cull_mask = 1048543

[node name="AntigravUpper" type="Area3D" parent="Ship/World"]
collision_mask = 4
priority = 2
gravity_space_override = 3
gravity_point_center = Vector3(0, 1, 0)
gravity_direction = Vector3(0, 1, 0)
gravity = 0.0
linear_damp_space_override = 2
linear_damp = 3.0
angular_damp_space_override = 3
angular_damp = 0.0
metadata/_edit_group_ = true

[node name="CollisionShape3D" type="CollisionShape3D" parent="Ship/World/AntigravUpper"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.805365, 0)
shape = SubResource("BoxShape3D_o0m0n")

[node name="AntigravLower" type="Area3D" parent="Ship/World"]
collision_mask = 4
priority = 1
gravity_space_override = 3
gravity_point_center = Vector3(0, 1, 0)
gravity_direction = Vector3(0, 1, 0)
gravity = 1.0
linear_damp_space_override = 1
linear_damp = 1.0
angular_damp_space_override = 1
angular_damp = 0.3
metadata/_edit_group_ = true

[node name="CollisionShape3D" type="CollisionShape3D" parent="Ship/World/AntigravLower"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.363013, 0)
shape = SubResource("BoxShape3D_ol3sv")

[node name="OmniScreenUI" parent="Ship" instance=ExtResource("13_1tfvx")]
unique_name_in_owner = true
metadata/_edit_lock_ = true

[node name="Dynamic" type="Node3D" parent="Ship"]

[node name="PickableGun" parent="Ship/Dynamic" instance=ExtResource("11_iq5it")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.657799, 1.10079, -0.620969)

[node name="PickableEnergyCell" parent="Ship/Dynamic" instance=ExtResource("14_trw2q")]
transform = Transform3D(0.865029, -0.501722, 0, 0.501722, 0.865029, 0, 0, 0, 1, 0.846122, 1.11955, 0.511702)

[node name="PickableSolarCell" parent="Ship/Dynamic" instance=ExtResource("16_m57o7")]
transform = Transform3D(0.841699, -0.539947, 0, 0.539947, 0.841699, 0, 0, 0, 1, 0.62483, 1.11955, 0.505243)

[node name="WeaponSystem" parent="Ship/Dynamic" instance=ExtResource("16_pivml")]

[node name="WeaponIonSystem" parent="Ship/Dynamic" instance=ExtResource("18_fqkt8")]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 0, 0)

[node name="ShieldSystem" parent="Ship/Dynamic" node_paths=PackedStringArray("shield") instance=ExtResource("17_5wwgv")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.8, 0, -0.6)
shield = NodePath("../../World/Shield")

[node name="NavigationSystem" parent="Ship/Dynamic" instance=ExtResource("16_bwulk")]
unique_name_in_owner = true
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, -0.8, 0, 0.6)

[node name="PickableRepairer" parent="Ship/Dynamic" instance=ExtResource("22_altib")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.893657, 1.09259, -0.641879)

[node name="Damages" type="Node3D" parent="Ship"]
unique_name_in_owner = true

[node name="EnemySpawner" type="Node3D" parent="."]
unique_name_in_owner = true
script = ExtResource("19_w5q7l")
enemies = Array[PackedScene]([ExtResource("20_r6ant"), ExtResource("21_5n1s0"), ExtResource("22_ntop1")])
weapons = Array[PackedScene]([ExtResource("22_t2x7m"), ExtResource("23_u3ac8"), ExtResource("24_2saj3"), ExtResource("29_sti0e")])

[node name="Projectiles" type="Node3D" parent="."]
unique_name_in_owner = true

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
unique_name_in_owner = true
environment = SubResource("Environment_bssff")
camera_attributes = SubResource("CameraAttributesPractical_2pxkv")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(0.888281, 0.282452, -0.362185, 0, 0.788558, 0.61496, 0.459301, -0.546257, 0.700461, 0, 4.42039, 0)
light_color = Color(0.842333, 0.78, 1, 1)
light_cull_mask = 4294967263
shadow_enabled = true
shadow_bias = 0.03
directional_shadow_mode = 1
directional_shadow_split_1 = 0.3
directional_shadow_max_distance = 10.0

[connection signal="hit" from="Ship/World/Core" to="." method="_on_core_hit"]
[connection signal="hp_changed" from="Ship/World/Core" to="." method="_on_core_hp_changed"]
[connection signal="started_moving" from="Ship/Dynamic/NavigationSystem" to="." method="_on_navigation_system_started_moving"]
[connection signal="enemy_spawned" from="EnemySpawner" to="." method="_on_enemy_spawner_enemy_spawned"]
